ADD_DEFINITIONS(-D_UNICODE)
ADD_DEFINITIONS(-D__CRT_SECURE_NO_WARNINGS)

SET(SELF_INCLUDE_DIR ${INCLUDE_DIR})

SET(METAZION_INCLUDE_DIR $ENV{METAZION})
SET(METAZION_LIBRARY_DIR $ENV{METAZION}/${LIB}/${PLATFORM})

SET(LIBMYSQL_INCLUDE_DIR $ENV{LIBMYSQL}/include)
SET(LIBMYSQL_LIBRARY_DIR $ENV{LIBMYSQL}/lib)

MESSAGE(STATUS ${SELF_INCLUDE_DIR})

MESSAGE(STATUS ${METAZION_INCLUDE_DIR})
MESSAGE(STATUS ${METAZION_LIBRARY_DIR})

MESSAGE(STATUS ${LIBMYSQL_INCLUDE_DIR})
MESSAGE(STATUS ${LIBMYSQL_LIBRARY_DIR})

INCLUDE_DIRECTORIES(${SELF_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${METAZION_INCLUDE_DIR})
LINK_DIRECTORIES(${METAZION_LIBRARY_DIR})

INCLUDE_DIRECTORIES(${LIBMYSQL_INCLUDE_DIR})
LINK_DIRECTORIES(${LIBMYSQL_LIBRARY_DIR})

FILE(GLOB SELF_HEADERS "./*.hpp")
FILE(GLOB SELF_SOURCES "./*.cpp")

ADD_LIBRARY(${SELF}
    ${SELF_HEADERS}
    ${SELF_SOURCES}
)

SET(METAZION_NET_LINK_LIBRARY optimized MzNet debug MzNetD)
TARGET_LINK_LIBRARIES(${SELF} ${METAZION_NET_LINK_LIBRARY})

SET(METAZION_SHARE_LINK_LIBRARY optimized MzShare debug MzShareD)
TARGET_LINK_LIBRARIES(${SELF} ${METAZION_SHARE_LINK_LIBRARY})

SET(LIBMYSQL_LINK_LIBRARY optimized libmysql debug libmysql)
TARGET_LINK_LIBRARIES(${SELF} ${LIBMYSQL_LINK_LIBRARY})

SET(LIBRARY_OUTPUT_PATH ${BUILD_DIR}/${LIB}/${PLATFORM})
SET(EXECUTABLE_OUTPUT_PATH ${BUILD_DIR}/${BIN}/${PLATFORM})

IF(PRODUCT_INSTALL)
    INSTALL(TARGETS ${SELF}
    RUNTIME DESTINATION ${BIN_DIR}
    LIBRARY DESTINATION ${LIB_DIR}
    ARCHIVE DESTINATION ${LIB_DIR})
ENDIF(PRODUCT_INSTALL)

IF(WIN32)
# create visual studio folders
SOURCE_GROUP(Header FILES ${SELF_HEADERS})
SOURCE_GROUP(Source FILES ${SELF_SOURCES})
ENDIF(WIN32)